Fix footer covering up long content

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,11 @@ section {
   overflow: auto;
 }
 
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
+
 .center {
   text-align: center;
   
@@ -26,7 +31,6 @@ section {
 }
 
 #content {
-  position: relative;
   overflow: auto;
   background-color: white;
   margin: auto;
@@ -34,6 +38,7 @@ section {
   height: 100%;
   min-height: 100%;
   box-sizing: border-box;
+  padding-bottom: 120px;
 }
 
 .padded-content {
@@ -216,7 +221,7 @@ label {
 
 
 /* footer */
-#footer-bar {
+#footer {
   position: absolute;
   height: 110px;
   bottom: 0;
@@ -229,10 +234,4 @@ label {
     padding: 0px;
     margin: 0px;
   }
-}
-
-
-/* tables */
-td {
-  padding: 5px;
 }
